[project]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Senra",email = "acsenrafilho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.117.1,<0.118.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"
black = "^24.0.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 79
extend-exclude = 'migrations'

[tool.flake8]
max-line-length = 79
extend-ignore = ['E203', 'W503']
exclude = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'flake8'
format = 'black .'
run = 'fastapi dev fastapi_zero/app.py'
pre_test = 'task format'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'
